# flat_stocks

./: .gitignore  README.md  RESEARCH.md  pyproject.toml
apps/: README.md
examples/: load_li_reports.py  run_research.py
src/trading_system/: __init__.py  config.py  pipeline.py  types.py
src/trading_system/analysis/: __init__.py  leakage_audit.py  system_report.py
src/trading_system/backtest/: __init__.py  alpha.py  engine.py  metrics.py  walk_forward.py
src/trading_system/data/: __init__.py  database.py  seed_loader.py  storage.py
src/trading_system/data/providers/: __init__.py  alpha_vantage.py  base.py
src/trading_system/data/seeds/: li_quarterly.json  nvda_quarterly.json
src/trading_system/fundamental/: __init__.py  model.py  profiler.py  valuation.py
src/trading_system/optimization/: __init__.py  feature_synergy.py
src/trading_system/reporting/: __init__.py  strategy_report.py
src/trading_system/strategy/: __init__.py  feature_synergy.py  range_synergy.py
src/trading_system/technical/: __init__.py  indicators.py  nadaraya_watson.py
tests/: test_adaptive_system.py  test_backtest.py  test_database.py  test_indicators.py  test_nw_synergy_alpha.py  test_range_bound.py  test_valuation.py
